[package]

name = "static"
version = "0.0.1"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/static"
license = "MIT"

[dependencies]
time = "*"

[dependencies.iron]
git = "https://github.com/jihokoo/iron.git"

[dependencies.mount]
git = "https://github.com/jihokoo/mount.git"

[dependencies.router]
git = "https://github.com/jihokoo/router.git"

[dependencies.iron-test]
git = "https://github.com/jihokoo/iron-test.git"
